discussion/kv_engine/127192/127192_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

PiTR WIP

Change-Id: I9be45b72e7a7bd3d73bca5b46df21f44a67d97dc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-05-04 08:14:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-04 09:01:16.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27943/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\magma-kvstore/magma-kvstore.h(289): error C3668: "MagmaKVStore::initBySeqnoScanContext": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27943/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23907/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:295:37:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23907/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2072/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.cc:86:9: warning: pass by value and use std::move [modernize-pass-by-value]
        std::optional<uint64_t> timestamp)
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:295:37: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            ValueFilter valOptions) override;
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:908:49: note: hidden overloaded virtual function "KVStore::initBySeqnoScanContext" declared here: different number of parameters (7 vs 6)
    virtual std::unique_ptr<BySeqnoScanContext> initBySeqnoScanContext(
                                                ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:825:34: error: allocating an object of abstract class type "MagmaKVStore" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.cc:196:24: note: in instantiation of function template specialization "std::make_unique<MagmaKVStore, MagmaKVStoreConfig &>" requested here
        auto rw = std::make_unique<MagmaKVStore>(
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:908:49: note: unimplemented pure virtual method "initBySeqnoScanContext" in "MagmaKVStore"
    virtual std::unique_ptr<BySeqnoScanContext> initBySeqnoScanContext(
                                                ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:825:34: error: allocating an object of abstract class type "MockMagmaKVStore" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:2668:24: note: in instantiation of function template specialization "std::make_unique<MockMagmaKVStore, MagmaKVStoreConfig &>" requested here
        kvstore = std::make_unique<MockMagmaKVStore>(*kvstoreConfig);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:908:49: note: unimplemented pure virtual method "initBySeqnoScanContext" in "MockMagmaKVStore"
    virtual std::unique_ptr<BySeqnoScanContext> initBySeqnoScanContext(
                                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2072/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:295:37:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2072/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3497/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2580/ : FAILURE

Compile error at [2020-05-04T08:17:45.214Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:295:37:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2580/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3522/ : FAILURE

Compile error at [2020-05-04T08:36:53.749Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:289:41:
error: ?std::unique_ptr<BySeqnoScanContext> MagmaKVStore::initBySeqnoScanContext(std::unique_ptr<StatusCallback<GetValue> >, std::unique_ptr<StatusCallback<CacheLookup> >, Vbid, uint64_t, DocumentFilter, ValueFilter)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3522/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11367/ : FAILURE

Compile error at [2020-05-04T08:44:59.598Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:289:41:
error: ?std::unique_ptr<BySeqnoScanContext> MagmaKVStore::initBySeqnoScanContext(std::unique_ptr<StatusCallback<GetValue> >, std::unique_ptr<StatusCallback<CacheLookup> >, Vbid, uint64_t, DocumentFilter, ValueFilter)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11367/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3578/ : FAILURE

Compile error at [2020-05-04T08:53:01.086Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:289:41:
error: ?std::unique_ptr<BySeqnoScanContext> MagmaKVStore::initBySeqnoScanContext(std::unique_ptr<StatusCallback<GetValue> >, std::unique_ptr<StatusCallback<CacheLookup> >, Vbid, uint64_t, DocumentFilter, ValueFilter)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3578/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/590/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
